CHANGE LOG: NUKEVIET CMS
http://nukeviet.vn

NUKEVIET 4.3.06

- Fix bug comment XSS. Thanks dalatsubnet at WhiteHub#640
- Remove Google MAP API and fix block global.company_info.php
- Module users: Save the information of the object that has activated user account
- Fix the issue of adding news with very long keywords
- Fix add, detete admin
- Fix user add, user edit in admin.
- Fix send mail
- User lostactivelink: Skip step two if security question and answer not required
- Module contact: Automatically detects links of other information

NUKEVIET 4.3.05
- Add repeat type configuration of cronjobs
- Fix user registration error on mobile theme
- Chart.js v2.7.3
- Clipboard v2.0.4
- PHPMailer v6.0.7
- Module voting: Fix error showing the results of the poll does not activate
- Fix captcha not show
- Remove googleplus
- CKEditor 4.11.3
- Add Support PHP 7.3
- Module users: Add user edit censor, allowed to select a field to sort at the user custom fields, fix custom field with editor, fix group counter errors when deleting user
- Remove googleplus

NUKEVIET 4.3.04

- Fix admin can not login
- Add user register callback
- Sitemap: Can split module sitemap
- Remove gregwar/captcha
- Fixed RSS image height
- Fix upload file from ckeditor
- Fix function nv_redirect_location
- Fix upload and auto resize image
- Fix security bug (CVE-2019-7725, CVE-2019-7726). Thanks hungnguyenmz and Zepto Team

NUKEVIET 4.3.03

- Fix tag contains special characters
- Clipboard.js v2.0.1
- gregwar/captcha v1.1.6
- Module banners: allows to enter links freely
- Module news: fixed bug when attaching file
- Module comment: fix quote comment when post name is empty
- Fix save file ini
- Fix search system logs
- Fix check server support rewrite
- Turn off error messages when debug mode off
- Module users: Fix update group statistics when delete user, fix user custom field, fix user safe mode

NUKEVIET 4.3.02
- Fix save google analytics id