@@ -195,7 +195,7 @@ function nv_add_plan_theme($contents, $array_uploadtype, $groups_list)
     foreach ($contents['form'][2] as $form) {
         $xtpl->assign('FORM', array(
             'key' => $form,
-            'title' => $form,
+            'title' => isset($lang_module['form_' . $form]) ? $lang_module['form_' . $form] : $form,
             'selected' => $form == $contents['form'][3] ? ' selected="selected"' : '')
         );
         $xtpl->parse('main.form');
@@ -284,7 +284,7 @@ function nv_edit_plan_theme($contents, $array_uploadtype, $groups_list)
     foreach ($contents['form'][2] as $form) {
         $xtpl->assign('FORM', array(
             'key' => $form,
-            'title' => $form,
+            'title' => isset($lang_module['form_' . $form]) ? $lang_module['form_' . $form] : $form,
             'selected' => $form == $contents['form'][3] ? ' selected="selected"' : '')
         );
         $xtpl->parse('main.form');
