@@ -29,7 +29,7 @@ $contents = array();
 $contents['caption'] = sprintf($lang_module['info_plan_caption'], $row['title']);
 $contents['rows']['title'] = array($lang_module['title'], $row['title']);
 $contents['rows']['blang'] = array($lang_module['blang'], (!empty($row['blang'])) ? $language_array[$row['blang']]['name'] : $lang_module['blang_all']);
-$contents['rows']['form'] = array($lang_module['form'], $row['form']);
+$contents['rows']['form'] = array($lang_module['form'], (isset($lang_module['form_' . $row['form']]) ? $lang_module['form_' . $row['form']] : $row['form']));
 $contents['rows']['size'] = array($lang_module['size'], $row['width'] . ' x ' . $row['height'] . 'px');
 $contents['rows']['is_act'] = array($lang_module['is_act'], $row['act'] ? $lang_global['yes'] : $lang_global['no']);
 $contents['rows']['require_image'] = array($lang_module['require_image'], $lang_module['require_image' . $row['require_image']]);
