@@ -22,7 +22,7 @@ foreach ($global_array_plans as $row) {
     $contents['rows'][$row['id']]['title'] = array($row['title']);
     $contents['rows'][$row['id']]['blang'] = array($lang_module['blang'], ((!empty($row['blang'])) ? $language_array[$row['blang']]['name'] : $lang_module['blang_all']));
     $contents['rows'][$row['id']]['size'] = array($lang_module['size'], $row['width'] . ' x ' . $row['height'] . 'px');
-    $contents['rows'][$row['id']]['form'] = array($lang_module['form'], $row['form']);
+    $contents['rows'][$row['id']]['form'] = array($lang_module['form'], (isset($lang_module['form_' . $row['form']]) ? $lang_module['form_' . $row['form']] : $row['form']));
     $contents['rows'][$row['id']]['description'] = array($lang_module['description'], $row['description']);
     $contents['rows'][$row['id']]['allowed'] = isset($global_array_uplans[$row['id']]) ? true : false;
 }
