@@ -22,7 +22,7 @@
                     <td>{CONTENTS.blang.0}:</td>
                     <td>&nbsp;</td>
                     <td>
-                    <select name="{CONTENTS.blang.1}" id="{CONTENTS.blang.1}" class="form-control w200">
+                    <select name="{CONTENTS.blang.1}" id="{CONTENTS.blang.1}" class="form-control w250">
                         <option value="">{CONTENTS.blang.2}</option>
                         <!-- BEGIN: blang -->
                         <option value="{BLANG.key}"{BLANG.selected}>{BLANG.title}</option>
@@ -33,7 +33,7 @@
                     <td>{CONTENTS.form.0}:</td>
                     <td>&nbsp;</td>
                     <td>
-                    <select name="{CONTENTS.form.1}" id="{CONTENTS.form.1}" class="form-control w200">
+                    <select name="{CONTENTS.form.1}" id="{CONTENTS.form.1}" class="form-control w250">
                         <!-- BEGIN: form -->
                         <option value="{FORM.key}"{FORM.selected}>{FORM.title}</option>
                         <!-- END: form -->
