@@ -3,6 +3,7 @@ http://nukeviet.vn
 
 NUKEVIET 4.3.06
 
+- Module banners: Add display type "Random One"
 - Fix bug comment XSS. Thanks dalatsubnet at WhiteHub#640
 - Remove Google MAP API and fix block global.company_info.php
 - Module users: Save the information of the object that has activated user account
